; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_trap-v6.c_abort_debug.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_trap-v6.c_abort_debug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.trapframe = type { i32 }

@curthread = common dso_local global %struct.thread* null, align 8
@SIGTRAP = common dso_local global i32 0, align 4
@TRAP_BRKPT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"No debugger in kernel.\0A\00", align 1
@T_BREAKPOINT = common dso_local global i32 0, align 4
@T_WATCHPOINT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.trapframe*, i64, i64, i32, i64)* @abort_debug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @abort_debug(%struct.trapframe* %0, i64 %1, i64 %2, i32 %3, i64 %4) #0 {
  %6 = alloca %struct.trapframe*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca %struct.thread*, align 8
  store %struct.trapframe* %0, %struct.trapframe** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %12 = load i32, i32* %9, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %5
  %15 = load %struct.thread*, %struct.thread** @curthread, align 8
  store %struct.thread* %15, %struct.thread** %11, align 8
  %16 = load %struct.thread*, %struct.thread** %11, align 8
  %17 = load i32, i32* @SIGTRAP, align 4
  %18 = load i32, i32* @TRAP_BRKPT, align 4
  %19 = load i64, i64* %10, align 8
  %20 = call i32 @call_trapsignal(%struct.thread* %16, i32 %17, i32 %18, i64 %19)
  %21 = load %struct.thread*, %struct.thread** %11, align 8
  %22 = load %struct.trapframe*, %struct.trapframe** %6, align 8
  %23 = call i32 @userret(%struct.thread* %21, %struct.trapframe* %22)
  br label %26

24:                                               ; preds = %5
  %25 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %26

26:                                               ; preds = %24, %14
  ret void
}

declare dso_local i32 @call_trapsignal(%struct.thread*, i32, i32, i64) #1

declare dso_local i32 @userret(%struct.thread*, %struct.trapframe*) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
